--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "^1.16.1",
     "dotenv": "^4.0.0",
+    "mongoose": "^4.8.4",
     "nodemon": "^1.11.0"
+  },
+  "dependencies": {
+    "express": "^4.14.1"
   }
 }
